force-app/main/default/objects/ccrz__E_Order__c/ccrz__E_Order__c.object-meta.xml
<CustomObject>
    <description>The E_Order__c object contains the header data of placed order.</description>
    <label>CC Order</label>
    <nameField>
        <displayFormat>O-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>