force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__AdjustmentReason__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AdjustmentReason__c</fullName>
    <description>Optional reason text for the Adjustment Amount field.</description>
    <label>Adjustment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>