force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__BuyerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerCompanyName__c</fullName>
    <description>Deprecated</description>
    <label>Company Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>