force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__BuyerEmail__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerEmail__c</fullName>
    <description>Email address captured during the checkout process.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>