force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__BuyerFirstName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerFirstName__c</fullName>
    <description>First name captured during the checkout process.</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>