force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__BuyerLastName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerLastName__c</fullName>
    <description>Last name captured during the checkout process.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>