force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__BuyerPhone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BuyerPhone__c</fullName>
    <description>Phone number captured during the checkout process.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>