force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__CCEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CCEmailAddress__c</fullName>
    <description>List of whitespace separated email addresses. Should only be used in low volume order implementations. Contains the list of email addresses that the order confirmation was sent to.</description>
    <label>CCEmailAddress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>