force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__Contact__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contact of the User that this order was placed for.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CC Orders</relationshipLabel>
    <relationshipName>CC_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>