force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ContractId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContractId__c</fullName>
    <description>Deprecated</description>
    <label>Contract ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>