force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ExtCarrier__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExtCarrier__c</fullName>
    <description>Deprecated</description>
    <label>Ext Carrier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>