force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ExtShipTrackNo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExtShipTrackNo__c</fullName>
    <description>Deprecated</description>
    <label>Ext ShipTrack No</label>
    <length>250</length>
    <type>Text</type>
</CustomField>