force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__IsAnonymous__c.field-meta.xml
<CustomField>
    <fullName>ccrz__IsAnonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate if this is an anonymous checkout</description>
    <label>Is Anonymous</label>
    <type>Checkbox</type>
</CustomField>