force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Name__c</fullName>
    <description>Carried over from the cart name that was used to place this order.</description>
    <label>Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>