force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__Order__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent order, which originally submitted the subscription for this order, if applicable</description>
    <inlineHelpText>Parent order, which originally submitted the subscription for this order, if applicable</inlineHelpText>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Children Orders</relationshipLabel>
    <relationshipName>E_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>