force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderDate__c</fullName>
    <description>The date of the order.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>