force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderId__c</fullName>
    <description>External id reference.</description>
    <externalId>true</externalId>
    <label>Order Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>