force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderName__c</fullName>
    <description>Field to grab the standard name from the Order object.
This field was created due to a defect in Salesforce returning Name__c instead of Name in email templates.</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Name (Duplicated)</label>
    <type>Text</type>
</CustomField>