force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderNumber__c</fullName>
    <description>Derived from the SFDC Name field as the digit portion of the order Name + 1000000.</description>
    <label>Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>