force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__OrderSeller__c.field-meta.xml
<CustomField>
    <fullName>ccrz__OrderSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Typically used in split order scenarios.  This field will represent, for a split order, the seller to which this order belongs.</description>
    <label>Order Seller</label>
    <referenceTo>ccrz__E_Seller__c</referenceTo>
    <relationshipLabel>Seller Orders</relationshipLabel>
    <relationshipName>SellerOrders</relationshipName>
    <type>Lookup</type>
</CustomField>