force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__PONumber__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PONumber__c</fullName>
    <description>Deprecated</description>
    <label>PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>