force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ShipMethod__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipMethod__c</fullName>
    <description>Shipment method captured during the checkout process.</description>
    <label>Ship Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>