force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ShipStructure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipStructure__c</fullName>
    <description>Designates the shipping data structure used for this order.  Valid values are empty or lli but will be expanded in the future.</description>
    <label>Ship Structure</label>
    <length>128</length>
    <type>Text</type>
</CustomField>