force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a CC Contact Address object that contains the ship to address data. This will be a unique copy of the address information captured during checkout.</description>
    <label>Ship To</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipName>E_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>