force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__SkipTax__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SkipTax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the tax calculation was skipped during checkout.</description>
    <label>Skip Tax Calculation</label>
    <type>Checkbox</type>
</CustomField>