force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__SplitParentOrder__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SplitParentOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When an order is split into one or more child orders this field references the source order that this child was split from.</description>
    <label>Split Parent Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>CC Orders (Split Parent Order)</relationshipLabel>
    <relationshipName>OrderSplits</relationshipName>
    <type>Lookup</type>
</CustomField>