force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__TaxExemptFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TaxExemptFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicating if the order was tax exempt. Copied from the cart during order placement.</description>
    <label>Tax Exempt Flag</label>
    <type>Checkbox</type>
</CustomField>