force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__TotalSurcharge__c.field-meta.xml
<CustomField>
    <fullName>ccrz__TotalSurcharge__c</fullName>
    <description>Surcharge captured during order placement.</description>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>