force-app/main/default/objects/ccrz__E_Order__c/fields/ccrz__VerifyExemptionFlag__c.field-meta.xml
<CustomField>
    <fullName>ccrz__VerifyExemptionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated</description>
    <label>VerifyExemptionFlag</label>
    <type>Checkbox</type>
</CustomField>