force-app/main/default/objects/ccrz__E_Order__c/fields/EC_CSR_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_CSR_Email__c</fullName>
    <defaultValue>$Label.EC_CSR_Email</defaultValue>
    <inlineHelpText>used for csr email address.</inlineHelpText>
    <label>CSR Email</label>
    <type>Email</type>
</CustomField>