force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Customer_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EC_Customer_Order_Status__c</fullName>
    <formula>IF(ISPICKVAL(ccrz__OrderStatus__c,&apos;Order Submitted&apos;) || (NOT(ISNULL(EC_Submission_Failure_Count__c)) &amp;&amp; EC_Submission_Failure_Count__c &lt; 5 &amp;&amp; ISPICKVAL(ccrz__OrderStatus__c,&apos;Failed&apos;)),&apos;In Progress&apos;,IF( NOT(ISNULL(EC_Submission_Failure_Count__c))  &amp;&amp;   EC_Submission_Failure_Count__c &gt;=5 &amp;&amp; ISPICKVAL(ccrz__OrderStatus__c,&apos;Failed&apos;),&apos;Submitted&apos;,
IF(ISPICKVAL(ccrz__OrderStatus__c,&apos;Pending&apos;), &apos;Confirmed&apos;, TEXT(ccrz__OrderStatus__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Order Status</label>
    <type>Text</type>
</CustomField>