force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Division__c.field-meta.xml
<CustomField>
    <fullName>EC_Division__c</fullName>
    <formula>TEXT(ccrz__OriginatedCart__r.EC_Ship_To_Account__r.EC_Division__c)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>