force-app/main/default/objects/ccrz__E_Order__c/fields/EC_ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EC_ERP_Order_Number__c</fullName>
    <formula>IF(ISNULL(ccrz__OrderId__c) || ccrz__OrderId__c == &apos;&apos; , &apos;See Order Confirmation&apos;,  ccrz__OrderId__c)</formula>
    <label>ERP Order Number</label>
    <type>Text</type>
</CustomField>