force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Order_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>EC_Order_Submission_Type__c</fullName>
    <label>Order Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>shopecolab</fullName>
            </value>
            <value>
                <fullName>Equipment Ordering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>