force-app/main/default/objects/ccrz__E_Order__c/fields/EC_OrdersCount__c.field-meta.xml
<CustomField>
    <fullName>EC_OrdersCount__c</fullName>
    <description>BUG:91697:Raghav:Used in Orders Reports to count total number of orders.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EC_OrdersCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>