force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Related_Products__c.field-meta.xml
<CustomField>
    <fullName>EC_Related_Products__c</fullName>
    <label>EC Related Products</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>