force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Submission_Failure_Count__c.field-meta.xml
<CustomField>
    <fullName>EC_Submission_Failure_Count__c</fullName>
    <label>Submission Failure Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>