force-app/main/default/objects/ccrz__E_Order__c/fields/EC_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>EC_Support_Email__c</fullName>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>