force-app/main/default/objects/ccrz__E_Order__c/fields/EC_TotalQuantity__c.field-meta.xml
<CustomField>
    <fullName>EC_TotalQuantity__c</fullName>
    <description>US-762712: Raghav: This field is created to roll up the quantity field on related order items.</description>
    <label>EC_TotalQuantity</label>
    <summarizedField>ccrz__E_OrderItem__c.ccrz__Quantity__c</summarizedField>
    <summaryForeignKey>ccrz__E_OrderItem__c.ccrz__Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>