force-app/main/default/objects/ccrz__E_Order__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>ccrz__Account__c</columns>
    <columns>NAME</columns>
    <columns>ccrz__OrderId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ccrz__OrderDate__c</columns>
    <columns>ccrz__OrderStatus__c</columns>
    <columns>ccrz__SubtotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Connect Order</label>
</ListView>